--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </nav>
     </header>
     <main>
-        <section class="section_1">
+        <section class="sectionOne">
             <figure>
                 <img src="hero_bg_brawlstars_.jpg" alt="topimg">
             </figure>
         </section>
-        <section class="section_2">
+        <section class="sectionTwo">
             <figure>
                 <img src="bg_intro_brawlstars.jpg" alt="jpg">
             </figure>
